--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<img src="images/profile_img.ico" alt="Aditya Prakash">
 			</figure>
 			<h1>Aditya Prakash</h1>
-			<h2>You Can Me BuGGy Cause I'm Lil Buggy ;p</h2>
-			<h2>GeeKy NeRd| LiNux 🖤'r | CoDeR | LAzy oFc</h2>
+			<p>You Can Me BuGGy Cause I'm Lil Buggy ;p</p>
+			<p>GeeKy NeRd| LiNux 🖤'r | CoDeR | LAzy oFc</p>
 			<ul class="social">
 				<li><a href="https://github.com/adityaeth" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://twitter.com/adityaeth" target="_blank"><i class="icon-twitter"></i></a></li>
