--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<img src="images/profile_img.ico" alt="Aditya Prakash">
 			</figure>
 			<h1>Aditya Prakash</h1>
-			<p><font size="10" color="white">Hi I'm BuGGy ;p</font></p>
+			<p><font size="10" color="blue">Hi I'm BuGGy ;p</font></p>
 			<p>GeeKy NeRd| LiNux 🖤'r | CoDeR | LAzy oFc</p>
 			<ul class="social">
 				<li><a href="https://github.com/adityaeth" target="_blank"><i class="icon-github"></i></a></li>
