--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 			<figure>
 				<img src="images/profile_img.ico" alt="Aditya Prakash">
 			</figure>
-			<h1>Aditya Prakash</h1>
-			<p><font size="4" color="blue">Hi I'm BuGGy ;p</font></p>
-			<p>GeeKy NeRd| LiNux 🖤'r | CoDeR | LAzy oFc</p>
+			<h1>Aditya Prakash ( BuGGy )</h1>
+			<br>
+			<h5><font color="#F0FFFF">GeeKy NeRd | LiNux 🖤'r | CoDeR</font></h5>
+			<br>
+			<h5><font color="#F0FFFF">People Say I Malfunction</h5></font>
+			<h5><font color="#F0FFFF">So, They Call me BuGGy.</h5></font>
+			<br>
 			<ul class="social">
 				<li><a href="https://github.com/adityaeth" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://twitter.com/adityaeth" target="_blank"><i class="icon-twitter"></i></a></li>
