--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<img src="images/profile_img.ico" alt="Aditya Prakash">
 			</figure>
 			<h1>Aditya Prakash</h1>
-			<h5><font color="#F0FFFF">GeeKy NeRd | LiNux 🖤'r | CoDeR</font></h5>
+			<h5><font color="#F0FFFF">GeeKy NeRd | LiNux ♥️'r | CoDeR</font></h5>
 			<br>
 			<h5><font color="#F0FFFF">People Say I Malfunction</h5></font>
 			<h5><font color="#F0FFFF">So, They Call me BuGGy.</h5></font>
