reverted Buggy changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h5><font color="#F0FFFF">GeeKy NeRd | LiNux ♥️'r | CoDeR</font></h5>
 			<br>
 			<h5><font color="#F0FFFF">People Say I Malfunction</h5></font>
-			<h5><font color="#F0FFFF">So, They Call me <b>BuGGy<b>.</font></h5>
+			<h5><font color="#F0FFFF">So, They Call me </font><font color="#B22222"><b>BuGGy<b>.</h5></font>
 			
 			<ul class="social">
 				<li><a href="https://github.com/adityaeth" target="_blank"><i class="icon-github"></i></a></li>
