--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link id="favicon" rel="icon" href="img/PJNrL-KjXUw-Q0y83-KFv3n-aFe3Z.jpg">
     <link href="releases/v5-0-8/css/all.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/2a9aa9e8f5.js" crossorigin="anonymous"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Lato&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:800,800i&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:800,800i&amp;display=swap" rel="stylesheet">
