--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                     <div class="innerGridTable noCustomElement">
                         <div class="innerTableContent noCustomElement">
                             <div id="aboutTitleWrap"><h2 id="aboutTitle" class="aboutTitles text-custom-id-KXH4IPTrpkUVrAazGtap0XLZvlWmJ1HeE06m2xwP" altonclick="null" althref="null" originalfont="&quot;Roboto Mono&quot;, monospace">Who Am I?</h2></div>
-                            <div id="aboutParagraphWrap"><p id="aboutParagraph1" class="aboutParagraph text-custom-id-ZDrnlB3bBYgFGVug4AWnYwfdVszCprJlje4VOE6E" altonclick="null" althref="null" originalfont="Montserrat, sans-serif" style="font-family: Lobster, display;">Hello! Myself Aditya Prakash. <br>I'm a College Student.<br>Currently Pursuing B.Tech in Computer Science Enginnering<br>from Bengal College of Engineering and Technology, Durgapur.<br><br>I'm a Tech Enthusiat, Loves To Learn New Stuff and Dig Deeper into Things I love.<br><br>Coffie is My Drug and Learning is My Passion.<br><br></p></div>
+                            <div id="aboutParagraphWrap"><p id="aboutParagraph1" class="aboutParagraph text-custom-id-ZDrnlB3bBYgFGVug4AWnYwfdVszCprJlje4VOE6E" altonclick="null" althref="null" originalfont="Montserrat, sans-serif" style="font-family: Lobster, display;">Hello! Myself Aditya Prakash. <br>I'm a College Student.<br>Currently Pursuing B.Tech in Computer Science Engineering<br>from Bengal College of Engineering and Technology, Durgapur.<br><br>I'm a Tech Enthusiat, Loves To Learn New Stuff and Dig Deeper into Things I love.<br><br>Coffie is My Drug and Learning is My Passion.<br><br></p></div>
                         </div>
                     </div>
                 </div>
@@ -639,7 +639,7 @@
                 <div id="featuresInfoSide" class="outerGrid col-sm-5 col-xs-12 noCustomElement">
                     <div class="innerGridTable noCustomElement">
                         <div class="innerTableContent noCustomElement">
-                            <div id="featuresTitleWrap"><h2 id="featuresTitle" class="featuresTitles" altonclick="null" althref="null">My Ambitions</h2></div>
+                            <div id="featuresTitleWrap"><h2 id="featuresTitle" class="featuresTitles" altonclick="null" althref="null">My Ambition</h2></div>
                             <div id="featuresParagraphWrap"><p id="featuresParagraph" class="featuresParagraph text-custom-id-tMxHqWWlDX3i9PeZsS0dvvSBsDujBfFuHL2AZCp7" altonclick="null" althref="null" originalfont="Montserrat, sans-serif">My Vision is Not That Clear, But Still I&nbsp; Wish to Sharpen My Skills and Learn Something New Everyday.<br>Here are Few Things I wish to Master in Future and Do Something in These fields To Make Myself Proud.<br></p></div>
                             <div id="featuresRowContainer" class="noCustomElement">
                                 <!-- featuresTemplate start --><div class="features1 row noCustomElement">
